<resources>
    <string name="app_name">Oculus</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="text_detection">Text Detection</string>
    <string name="object_detection">Object Detection</string>
    <string name="voice_assistant">Voice Assistant</string>
    <string name="detect_object">Detect Object</string>
    <string name="enable_voice_assistant">Enable Voice Assistant</string>
    <string name="open_object_detection">Open Object Detection</string>
    <string name="open_text_detection">Open Text Detection</string>
    <string name="detect">DETECT</string>
    <string name="detected_objects">Detected Objects</string>
    <string name="disable_voice_commands">Disable Voice Commands</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="object_button_description">Press the object detection button on the top left edge of the screen or say \"Object\"  to detect an object in front of your camera.</string>
    <string name="text_recogbtn_descriptionn">Press the text recognition button on the top right edge of the screen or say \"Text\" to detect the text in front of your camera and click on the text to get voice output.</string>
    <string name="voice_assist_button_description">Press the voice assistant button on the bottom left edge or say \"Enable Voice\" to toggle voice assistant feature. You can start voice assistant by shaking your phone.</string>
    <string name="settings_btn_description">press the settings button on the bottom right edge of the screen or say "Settings" to access accessibility and app info options</string>
    <string name="take_a_tour">Take a tour →</string>
    <string name="next">Next</string>
    <string name="next_slide">Next Slide</string>
    <string name="take_a_tour_of_the_app">Take a Tour of the app.</string>
    <string name="skip_this_tour">Skip this tour</string>
    <string name="go_back_one_slide">Go back one slide</string>
    <string name="settings">Settings</string>
    <string name="main_menu">Main Menu</string>

</resources>
